# GameOfLifeAgain

./: CMakeLists.txt  main.cpp
graphics/: cell.cpp  cell.hpp  cell_board.cpp  cell_board.hpp
logic/: cell_field.cpp  cell_field.hpp  controls.cpp  controls.hpp  game_of_life.cpp  game_of_life.hpp  gui.cpp  gui.hpp
utils/: argparser.cpp  argparser.hpp  list2d.hpp  spdlog_formatters.hpp
